--- a/day 1_ Monday/notebooks/11_var_string_num.ipynb
+++ b/day 1_ Monday/notebooks/11_var_string_num.ipynb
@@ -52,11 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "uAphCe_HYI0V"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Python world!\n"
+     ]
+    }
+   ],
    "source": [
     "message = \"Hello Python world!\"\n",
     "print(message)"
@@ -73,11 +81,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "BSVNzChCYI0W"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Python world!\n",
+      "Python is my favorite language!\n"
+     ]
+    }
+   ],
    "source": [
     "message = \"Hello Python world!\"\n",
     "print(message)\n",
@@ -102,6 +119,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3523563932.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[5], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    if = 'indira'\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "if = 'indira'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "1z6kRbV9YI0W"
@@ -114,11 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "LN7WXliLYI0W"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mesage' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m message \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThank you for sharing Python with the world, Guido!\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(mesage)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'mesage' is not defined"
+     ]
+    }
+   ],
    "source": [
     "message = \"Thank you for sharing Python with the world, Guido!\"\n",
     "print(mesage)"
@@ -141,11 +188,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "j6CFjlOPYI0X"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thank you for sharing Python with the world, Guido!\n"
+     ]
+    }
+   ],
    "source": [
     "message = \"Thank you for sharing Python with the world, Guido!\"\n",
     "print(message)"
@@ -169,6 +224,42 @@
     "### Ex 1.1\n",
     "1. Store a message in a variable, and then print that message.\n",
     "2. Store a new message in the same variable, and then print that new message."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "today we start learning python\n"
+     ]
+    }
+   ],
+   "source": [
+    "learning = 'today we start learning python'\n",
+    "print(learning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i just changed this message\n"
+     ]
+    }
+   ],
+   "source": [
+    "learning = 'i just changed this message'\n",
+    "print(learning)"
    ]
   },
   {
