--- a/day 5_Friday/assignment/mini_project.ipynb
+++ b/day 5_Friday/assignment/mini_project.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "# <b>Project</b>\n",
-    "In this 6th assignment you will get the chance to complete a small data project on data you are personally interested in. You will need to get your own data, preprocess and analyze the data and visualize your findings. In this way, you will wrap up everything what you have learned in this course.\n",
+    "In this final assignment you will get the chance to complete a small data project on data you are personally interested in. You will need to get your own data, preprocess and analyze the data and visualize your findings. In this way, you will wrap up everything what you have learned in this course.\n",
     "<br>\n",
     "There is a lot of interesting data in the internet. We want to give you the opportunity to explore data which is in your own personal interest.\n",
     "<br>\n",
