--- a/day 1_ Thursday/assignment/ex_1.ipynb
+++ b/day 1_ Thursday/assignment/ex_1.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "1. Make a list of names that includes at least five people.\n",
     "2. Write an if test that prints a message about the room being crowded, if there are more than four people in your list.\n",
-    "3. Modify your list so that there are only two people in it. Use one of the methods for removing people from the list, don't just redefine the list.\n",
+    "3. Modify your list so that there are only two people in it. Use one of the methods for accessing people from the list.\n",
     "4. Add some names to your list, so that there are at least seven people in the list. Use one of the methods for appending people from the list, don't just redefine the list."
    ]
   },
@@ -81,11 +81,20 @@
     "id": "-7-5-5waYc1b"
    },
    "source": [
-    "1. Create a list of lists where each sub list holds the arguments for the function. Loop this list of lists and first check if the length of inner list is not 2, then print an error message \"Length of numbers must be 2!\" and continue to the next iteration (use the `continue` statement). Otherwise call the function and print the result of the function.\n",
+    "1. Create a list of lists where each sub list holds the arguments for the function bellow. Loop this list of lists and first check if the length of inner list is not 2, then print an error message \"Length of numbers must be 2!\". Otherwise call the function and print the result of the function.\n",
     "\n",
-    "2. Test your code by this list of lists: `number_lists = [[1, 1], [\"five\", 3], [5, \"three\"], [2, 2, 2], [5.5, 8]]`\n",
-    "\n",
-    "3. Replace `continue` statement with `break` statement and run your code again. Could you notice the difference?"
+    "2. Test your code by this list of lists: `number_lists = [[1, 1], [\"five\", 3], [5, \"three\"], [2, 2, 2], [5.5, 8]]`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The function is defined here \n",
+    "def function(a,b): \n",
+    "    print(f\"Function successfully called! The input was {a} and {b}\")"
    ]
   },
   {
@@ -124,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
