--- a/day 1_ Thursday/assignment/ex_1.ipynb
+++ b/day 1_ Thursday/assignment/ex_1.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "1. Make a list of names that includes at least five people.\n",
     "2. Write an if test that prints a message about the room being crowded, if there are more than four people in your list.\n",
-    "3. Modify your list so that there are only two people in it. Use one of the methods for accessing people from the list.\n",
+    "3. Modify your list so that there are only two people in it. Use one of the methods for accessing items from the list.\n",
     "4. Add some names to your list, so that there are at least seven people in the list. Use one of the methods for appending people from the list, don't just redefine the list."
    ]
   },
