--- a/day 1_ Monday/notebooks/13_if_statements.ipynb
+++ b/day 1_ Monday/notebooks/13_if_statements.ipynb
@@ -55,11 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "F0SUDt3jV5yx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like chocolate.\n",
+      "ice cream is my favorite dessert!\n",
+      "I like apple crisp.\n",
+      "I like cookies.\n"
+     ]
+    }
+   ],
    "source": [
     "# A list of desserts I like.\n",
     "desserts = ['chocolate', 'ice cream', 'apple crisp', 'cookies']\n",
@@ -69,7 +80,7 @@
     "for dessert in desserts:\n",
     "    if dessert == favorite_dessert:\n",
     "        # This dessert is my favorite, let's let everyone know!\n",
-    "        print(\"{} is my favorite dessert!\".format(dessert.title()))\n",
+    "        print(\"{} is my favorite dessert!\".format(favorite_dessert))\n",
     "    else:\n",
     "        # I like these desserts, but they are not my favorite.\n",
     "        print(\"I like {}.\".format(dessert))"
@@ -132,88 +143,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "vd0J_Pt8V5yz"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "5 == 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "1_HFXPfEV5y0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "5.0 == 5"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[4, 4, 5, 6] == [4, 5, 5, 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "id": "ihSun1ueV5y0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "5 != '5'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "qT_eOLALV5y0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "3 > 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "QHmN5Nw3V5y1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "3 >= 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "fJoAEMV5V5y1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "6 == 'a random string'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "7o-scbb2V5y1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'eric' == 'eric'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "TiK4g6ZUV5y1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'Eric' != 'eric'"
    ]
@@ -236,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "okThd54aV5y2"
    },
@@ -247,22 +373,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "RRFLhN0fV5y2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'a' in vowels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "gIAIYCvOV5y2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'b' not in vowels"
    ]
@@ -286,6 +434,47 @@
     "1. In a list, which is named `saved_numbers`, store some numbers.\n",
     "2. In another list, which is named `new_numbers`, store a different list of numbers. Some of those numbers should also be contained in `saved_numbers` list.\n",
     "3. Now loop through the new numbers and check if a new number is not in the saved numbers, add it into the `saved_numbers` and print a message \"_ is now saved.\". If the number is already in the list, print a message \"_ is already saved\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A judge can give 1 point\n"
+     ]
+    }
+   ],
+   "source": [
+    "judge = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "scores = list(range(10))\n",
+    "for x in scores:\n",
+    "    if x == 1:\n",
+    "        print(\"A judge can give {} point\".format(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(10))"
    ]
   },
   {
@@ -323,11 +512,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "id": "tBaNxPNaV5y3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wow, we have a lot of dogs here!\n"
+     ]
+    }
+   ],
    "source": [
     "dogs = ['willie', 'hootz', 'peso', 'juno']\n",
     "\n",
@@ -346,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "id": "v9p8OwMcV5y3"
    },
@@ -380,11 +577,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "id": "V3f96wvgV5y3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wow, we have a lot of dogs here!\n"
+     ]
+    }
+   ],
    "source": [
     "dogs = ['willie', 'hootz', 'peso', 'juno']\n",
     "\n",
@@ -405,11 +610,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "id": "uEh2ZS_1V5y5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Okay, this is a reasonable number of dogs.\n"
+     ]
+    }
+   ],
    "source": [
     "dogs = ['willie', 'hootz']\n",
     "\n",
@@ -443,18 +656,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "id": "iRFdpVeFV5y5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Holy mackerel, we might as well start a dog hostel!\n",
+      "Wow, we have a lot of dogs here!\n"
+     ]
+    }
+   ],
    "source": [
     "dogs = ['willie', 'hootz', 'peso', 'monty', 'juno', 'turkey']\n",
     "\n",
     "if len(dogs) >= 5:\n",
     "    print(\"Holy mackerel, we might as well start a dog hostel!\")\n",
     "# Note that: even length of list is >= 3, second print is not executed.\n",
-    "elif len(dogs) >= 3:\n",
+    "if len(dogs) >= 3:\n",
     "    print(\"Wow, we have a lot of dogs here!\")\n",
     "else:\n",
     "    print(\"Okay, this is a reasonable number of dogs.\")"
@@ -471,18 +693,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "id": "yv47tObKV5y6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "whatever!\n"
+     ]
+    }
+   ],
    "source": [
-    "dogs = ['willie', 'hootz', 'peso', 'monty']\n",
+    "dogs = ['willie', 'hootz']\n",
     "\n",
     "if len(dogs) >= 5:\n",
     "    print(\"Holy mackerel, we might as well start a dog hostel!\")\n",
     "elif len(dogs) >= 3:\n",
     "    print(\"Wow, we have a lot of dogs here!\")\n",
+    "elif len(dogs) >= 2:\n",
+    "    print(\"whatever!\")\n",
     "else:\n",
     "    print(\"Okay, this is a reasonable number of dogs.\")"
    ]
@@ -525,11 +757,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "id": "A69MDBj-V5zO"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Okay, this is a reasonable number of dogs.\n"
+     ]
+    }
+   ],
    "source": [
     "dogs = []\n",
     "\n",
@@ -552,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "id": "6xqlrKchV5zO"
    },
@@ -626,6 +866,44 @@
     "- After you define your list of aliens, set a variable called current_score or current_points equal to 0.\n",
     "- Inside your for loop, write a series of if tests to determine how many points to add to the current score.\n",
     "- To keep a running total, use the syntax current_score = current_score + points, where points is the number of points for the current alien."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'current_score' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m colored_alien \u001b[38;5;129;01min\u001b[39;00m player_1:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m colored_alien \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m----> 7\u001b[0m         current_score \u001b[38;5;241m=\u001b[39m current_score \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[0;32m      8\u001b[0m         scores\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m colored_alien \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mred\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'current_score' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "player_1 = ['green', 'green', 'red', 'blue', 'green']\n",
+    "current_score = 0\n",
+    "# scores = []\n",
+    "\n",
+    "for colored_alien in player_1:\n",
+    "    if colored_alien == 'green':\n",
+    "        current_score = current_score + 10\n",
+    "        scores.append(10)\n",
+    "    elif colored_alien == 'red':\n",
+    "        current_score = current_score + 5\n",
+    "        scores.append(5)\n",
+    "    elif colored_alien == 'blue':\n",
+    "        current_score = current_score + 20\n",
+    "        scores.append(20)\n",
+    "    else:\n",
+    "        print('This is an unknown color')\n",
+    "        \n",
+    "print(current_score, sum(scores))"
    ]
   },
   {
