--- a/day 1_ Monday/notebooks/14_lists_tuples-2.ipynb
+++ b/day 1_ Monday/notebooks/14_lists_tuples-2.ipynb
@@ -32,11 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bernice', 'aaron', 'cody']\n"
+     ]
+    }
+   ],
    "source": [
     "students = ['bernice', 'aaron', 'cody']\n",
+    "students.reverse()\n",
     "students.reverse()\n",
     "\n",
     "print(students)"
@@ -59,9 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[4, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [1, 3, 4, 2]\n",
     "\n",
@@ -76,9 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[1, 3, 4, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [1, 3, 4, 2]\n",
     "\n",
@@ -89,9 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 3, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [1, 3, 4, 2]\n",
     "\n",
@@ -111,9 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "usernames = ['bernice', 'cody', 'aaron']\n",
     "user_count = len(usernames)\n",
@@ -130,9 +173,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We have 1 user!\n",
+      "We have 3 users!\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an empty list to hold our users.\n",
     "usernames = []\n",
@@ -159,9 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m usernames \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbernice\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcody\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124maaron\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      2\u001b[0m user_count \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(usernames)\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis will cause an error: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m user_count)\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
    "source": [
     "usernames = ['bernice', 'cody', 'aaron']\n",
     "user_count = len(usernames)\n",
@@ -171,9 +235,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This will work: 3\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "usernames = ['bernice', 'cody', 'aaron']\n",
@@ -241,9 +313,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['australian cattle dog', 'labrador retriever']\n"
+     ]
+    }
+   ],
    "source": [
     "dogs = ['border collie', 'australian cattle dog', 'labrador retriever']\n",
     "# Remove the first dog from the list.\n",
@@ -263,9 +343,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['border collie', 'labrador retriever']\n"
+     ]
+    }
+   ],
    "source": [
     "dogs = ['border collie', 'australian cattle dog', 'labrador retriever']\n",
     "# Remove australian cattle dog from the list.\n",
@@ -283,9 +371,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['b', 'c', 'a', 'b', 'c']\n"
+     ]
+    }
+   ],
    "source": [
     "letters = ['a', 'b', 'c', 'a', 'b', 'c']\n",
     "# Remove the letter a from the list.\n",
@@ -307,9 +403,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "labrador retriever\n",
+      "['border collie', 'australian cattle dog']\n"
+     ]
+    }
+   ],
    "source": [
     "dogs = ['border collie', 'australian cattle dog', 'labrador retriever']\n",
     "last_dog = dogs.pop()\n",
@@ -329,13 +434,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "australian cattle dog\n",
+      "['border collie', 'labrador retriever']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "dogs = ['border collie', 'australian cattle dog', 'labrador retriever']\n",
-    "first_dog = dogs.pop(0)\n",
+    "first_dog = dogs.pop(1)\n",
     "\n",
     "print(first_dog)\n",
     "print(dogs)"
@@ -354,14 +468,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cody\n",
+      "aaron\n",
+      "ever\n",
+      "dalia\n",
+      "tina\n",
+      "janice\n"
+     ]
+    }
+   ],
    "source": [
-    "usernames = ['bernice', 'cody', 'aaron', 'ever', 'dalia']\n",
+    "usernames = ['bernice', 'cody', 'aaron', 'ever', 'dalia','tina', 'janice']\n",
     "\n",
     "# Grab the first three users in the list.\n",
-    "first_batch = usernames[0:3]\n",
+    "first_batch = usernames[1:]\n",
     "\n",
     "for user in first_batch:\n",
     "    print(user)"
@@ -473,6 +600,56 @@
     "    - Don't worry if your first sentence reads \"A judge can give a gymnast 1 points.\"\n",
     "    - However, you get 1000 bonus internet points if you can use a for loop, and have correct grammar. [hint](#hints_gymnast_scores)\n",
     "- You've just been informed that the judges don't want to hurt the gymnasts feeling so they will start scoring at 5 but go not give a perfect score to any one. Pop the first five elements (by position) and remove the last(by value).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = list(range(1, 11))\n",
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A judge can give a gymnast 1 point.\n",
+      "A judge can give a gymnast 2 points.\n",
+      "A judge can give a gymnast 3 points.\n",
+      "A judge can give a gymnast 4 points.\n",
+      "A judge can give a gymnast 5 points.\n",
+      "A judge can give a gymnast 6 points.\n",
+      "A judge can give a gymnast 7 points.\n",
+      "A judge can give a gymnast 8 points.\n",
+      "A judge can give a gymnast 9 points.\n",
+      "A judge can give a gymnast 10 points.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for score in scores[:1]:\n",
+    "    print(\"A judge can give a gymnast {} point.\".format(score))\n",
+    "for score in scores[1:]:\n",
+    "    print(\"A judge can give a gymnast {} points.\".format(score))"
    ]
   },
   {
